<resources>
    <string name="app_name">OnlineChess</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_roque">Roque?</string>
    //

    <string name="play">Play</string>
    <string name="credits">Credits</string>
    <string name="credits_text">
        Arquitecturas Móveis \n\n
        ISEC 2017/2018 \n\n
        a21200305 Jorge Teixeira \n
        a21190307 António Lima

    </string>
    <string name="help">Help</string>
    <string name="help_text">This is the help</string>
    <string name="stats">Stats</string>
    <string name="stats_text">This are the stats</string>
    <string name="edit">Edit</string>
    <string name="edit_text">This is the Edit</string>
    <string name="language">Language</string>
    <string name="single_player">Single Player</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join Game</string>
    <string name="name">Name</string>
    <string name="timer">Timer</string>
    <string name="multi_player_local">Multiplayer (Local)</string>
    <string name="account">Account</string>\
    <string name="account_text">This is user account</string>
    <string name="foto_button">Take Picture</string>
    <string name="save_button">Save</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="profile_email">Email: </string>
    <string name="profile_birthday">Birthday: </string>

    <string name="header1">OnlineChess</string>
    <string name="header2">www.isec.pt</string>

    <string name="statswin">Number of Wins</string>
    <string name="statsloss">Number of Losses</string>



    <string name="action_settings">Settings</string>
    <string name="spinner_title">Language</string>

    <!-- Language select dialog -->
    <string-array name="lang_select">
        <item>English</item>
        <item>Hindi</item>
    </string-array>
</resources>
