<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_play"
            android:icon="@drawable/ic_play_24"
            android:title="@string/play" />
        <item
            android:id="@+id/nav_credits"
            android:icon="@drawable/ic_credits_24"
            android:title="@string/credits" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_24"
            android:title="@string/help" />

        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_stats_24"
            android:title="@string/stats" />

        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_language_24"
            android:title="@string/language" />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_24"
            android:title="@string/account" />

        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_timer_24"
            android:title="@string/timer" />

    </group>

</menu>
